# libbpl_controls

./: CMakeLists.txt  README.md
controls/: CMakeLists.txt
controls/src/: main.cpp
input/: CMakeLists.txt
input/src/: main.cpp
libbpl_controls/: CMakeLists.txt
libbpl_controls/include/bpl/controls/: Input.h  InputMap.h  Joystick.h  JoystickFactory.h  JoystickLinux.h  JoystickLinuxFactory.h  JoystickSdl.h  JoystickSdlFactory.h  Keycode.h  Map.h
libbpl_controls/maps/: 8BitDo 8BitDo Ultimate wireless Controller for PC.json  8BitDo Pro 2 Wired Controller.json  8BitDo Ultimate wireless.json  8bitDo Pro 2 Wired Controller.json  Anbernic RG CubeXX Controller.json  Anbernic RG40XX-V Controller.json
libbpl_controls/src/: Debug.h  Input.cpp  InputMap.cpp  Joystick.cpp  JoystickFactory.cpp  JoystickLinux.cpp  JoystickLinuxFactory.cpp  JoystickSdl.cpp  JoystickSdlFactory.cpp  Map.cpp
test/: CMakeLists.txt  test_controls.cpp  test_controls_axis.cpp  test_controls_axis_buttons.cpp  test_controls_buttons.cpp  test_controls_sdl.cpp
